<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:background="@color/indigo"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="185dp"
                android:layout_height="278dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/image_view_poster_content_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="40dp"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_user_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="40dp"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <ToggleButton
                    android:id="@+id/tb_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textOff="@string/btn_favorite_label_off"
                    android:textOn="@string/btn_favorite_label_on" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_synopsis"
            android:background="@color/indigo"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_videos_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_videos"
            android:background="@color/indigo"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_videos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:nestedScrollingEnabled="false"/>

        <TextView
            android:id="@+id/tv_label_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_reviews"
            android:background="@color/indigo"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:nestedScrollingEnabled="false"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>